# voxcpm-rs

./: .gitignore  Cargo.toml  README.md
examples/: simple_tts.rs  streaming_tts.rs  voice_cloning.rs  vox_cpm_tts_cli.rs  voxcpm2_benchmark.rs
src/: audio_vae.rs  common.rs  config.rs  generate.rs  kv_cache.rs  lib.rs  linear.rs  minicpm4.rs  models.rs  profile.rs  quant.rs  tokenizer.rs
src/position_embed/: mod.rs  rope.rs
src/utils/: audio.rs  device.rs  mod.rs  tensor.rs
tests/: stream_batch_parity.rs  voxcpm2_smoke.rs
